crates/nova-lexer/tests/snapshots/lexer_tests__char_literal.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: "token_kinds(r\"'a' '\\n' '\\t'\")"
---
[
    "Char('a')",
    "Char('\\n')",
    "Char('\\t')",
    "Eof",
]
