crates/nova-lexer/tests/snapshots/lexer_tests__doc_comment.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: token_kinds(src)
---
[
    "DocComment(\" This is a doc comment\")",
    "Fn",
    "Ident(\"foo\")",
    "LParen",
    "RParen",
    "LBrace",
    "RBrace",
    "Eof",
]
