crates/nova-lexer/tests/snapshots/lexer_tests__keywords.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: token_kinds(src)
---
[
    "Let",
    "Mut",
    "Const",
    "Fn",
    "Return",
    "If",
    "Else",
    "While",
    "For",
    "In",
    "Break",
    "Continue",
    "Match",
    "Type",
    "Record",
    "Trait",
    "Impl",
    "Import",
    "Module",
    "Pub",
    "Async",
    "Await",
    "Extern",
    "Unsafe",
    "True",
    "False",
    "As",
    "Is",
    "Where",
    "With",
    "SelfLower",
    "SelfUpper",
    "Eof",
]
