crates/nova-lexer/tests/snapshots/lexer_tests__operators.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: "token_kinds(\"( ) [ ] { } , ; : :: -> => . .. ..= @ ? = == != < <= > >= && || ! \\\n         + - * / % += -= *= /= %= & | ^ ~ << >> &= |= ^= <<= >>=\")"
---
[
    "LParen",
    "RParen",
    "LBracket",
    "RBracket",
    "LBrace",
    "RBrace",
    "Comma",
    "Semicolon",
    "Colon",
    "ColonColon",
    "Arrow",
    "FatArrow",
    "Dot",
    "DotDot",
    "DotDotEq",
    "At",
    "Question",
    "Eq",
    "EqEq",
    "BangEq",
    "Lt",
    "LtEq",
    "Gt",
    "GtEq",
    "AmpAmp",
    "PipePipe",
    "Bang",
    "Plus",
    "Minus",
    "Star",
    "Slash",
    "Percent",
    "PlusEq",
    "MinusEq",
    "StarEq",
    "SlashEq",
    "PercentEq",
    "Amp",
    "Pipe",
    "Caret",
    "Tilde",
    "LtLt",
    "GtGt",
    "AmpEq",
    "PipeEq",
    "CaretEq",
    "LtLtEq",
    "GtGtEq",
    "Eof",
]
