crates/nova-lexer/tests/snapshots/lexer_tests__raw_string.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: token_kinds(src)
---
[
    "RawStr(\"raw \\\"quoted\\\" string\")",
    "Eof",
]
