crates/nova-lexer/tests/snapshots/lexer_tests__string_escapes.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: toks
---
[
    StrStart,
    StrPart(
        "tab:\t newline:\n quote:\" backslash:\\",
    ),
    StrEnd,
    Eof,
]
