crates/nova-lexer/tests/snapshots/lexer_tests__string_interpolation_simple.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: token_kinds(src)
---
[
    "StrStart",
    "StrPart(\"Hello, \")",
    "InterpOpen",
    "Ident(\"name\")",
    "InterpClose",
    "StrPart(\"!\")",
    "StrEnd",
    "Eof",
]
