crates/nova-lexer/tests/snapshots/lexer_tests__string_simple.snap
---
source: crates/nova-lexer/tests/lexer_tests.rs
expression: token_kinds(src)
---
[
    "StrStart",
    "StrPart(\"hello world\")",
    "StrEnd",
    "Eof",
]
